--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<div>
+			<label for = "name">Name</label>
+			<input type="text" placeholder="Name" id ="name">
+		</div>
+		<div>
+			<label for = "phone">Phone Number</label>
+			<input type="text" placeholder="Phone Number" id ="phone">
+		</div>
+		<div>
+			<label for = "address">Address</label>
+			<input type="text" placeholder="Address" id ="address">
+		</div>
+		<div>
+			<label for = "checkbox">Have you ever lived with a Dog before?</label>
+			<input type="checkbox" value="Have you ever lived with a Dog before?" id ="checkbox">
+		</div>
+		<div>
+			<label for="multiselect">Please select your preferred breeds</label>
+			<select id = "multiselect">
+				<option>xxx</option>
+				<option>abc</option>
+				<option>def</option>
+				
+			</select>
+		</div>
+		<div>
+			
+			<input type="submit" id="submit" value="submit">
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
