--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 			<input type="checkbox" value="Have you ever lived with a Dog before?" id ="checkbox">
 		</div>
 		<div>
-			<label for="multiselect">Please select your preferred breeds</label>
-			<select id = "multiselect">
+			<label for="multiSelect">Please select your preferred breeds</label>
+			<select id = "multiSelect">
 				<option>xxx</option>
 				<option>abc</option>
 				<option>def</option>
@@ -36,7 +36,7 @@
 		</div>
 		<div>
 			
-			<input type="submit" id="submit" value="submit">
+			<input type="submit" id="submit" value="Submit">
 		</div>
 	</form>
     <script type="text/javascript" src="./script.js">
